<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AvailabilityActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="Submitted Availabilities" />

    <ListView
        android:id="@+id/availability_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="* Tap a row to modify or delete availability"
        android:textStyle="italic"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/add_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Availability"
        />

</LinearLayout>