<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to Shift Scheduler"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Availability Submission"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_glance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Glance At Weekly"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Employees Management"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_work_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="work hour statistics"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Logout"/>

</LinearLayout>