...
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:id="@+id/statistics_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="3,4"
        android:padding="16dp"
        android:stretchColumns="0,2">

...
